Fixed generation of wxFileDialog:getPaths/1.

--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -985,7 +985,9 @@
 {class, wxFileDialog, wxDialog, [{skip, [{wxFileDialog,0}]}], 
  ['wxFileDialog','~wxFileDialog','GetDirectory','GetFilename',
   {'GetFilenames',[{"files", out}]},
-  'GetFilterIndex','GetMessage','GetPath','GetPaths','GetWildcard',
+  'GetFilterIndex','GetMessage','GetPath',
+  {'GetPaths', [{"paths", out}]},
+  'GetWildcard',
   'SetDirectory','SetFilename','SetFilterIndex','SetMessage','SetPath',
   'SetWildcard']}.
 
