--- a/configure.in
+++ b/configure.in
@@ -1,3 +1,21 @@
+dnl Process this file with autoconf to produce a configure script. -*-m4-*-
+
+dnl %CopyrightBegin%
+dnl 
+dnl Copyright Ericsson AB 2008-2009. All Rights Reserved.
+dnl 
+dnl The contents of this file are subject to the Erlang Public License,
+dnl Version 1.1, (the "License"); you may not use this file except in
+dnl compliance with the License. You should have received a copy of the
+dnl Erlang Public License along with this software. If not, it can be
+dnl retrieved online at http://www.erlang.org/.
+dnl 
+dnl Software distributed under the License is distributed on an "AS IS"
+dnl basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
+dnl the License for the specific language governing rights and limitations
+dnl under the License.
+dnl 
+dnl %CopyrightEnd%
 
 AC_INIT()
 
@@ -101,7 +119,7 @@ AC_SUBST(MIXED_CYGWIN)
 ## Check that we are in 32 bits mode on darwin 
 ## (wxWidgets require that it currently uses 32-bits Carbon)
 ## Otherwise skip building wxErlang
-AC_CHECK_SIZEOF(void *, 4)
+AC_CHECK_SIZEOF(void *)
 
 case $ac_cv_sizeof_void_p-$host_os in
     8-darwin*)
