--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -1,20 +1,20 @@
 %%	-*- erlang -*-
 %%
 %% %CopyrightBegin%
-%% 
-%% Copyright Ericsson AB 2008-2009. All Rights Reserved.
-%% 
+%%
+%% Copyright Ericsson AB 2008-2010. All Rights Reserved.
+%%
 %% The contents of this file are subject to the Erlang Public License,
 %% Version 1.1, (the "License"); you may not use this file except in
 %% compliance with the License. You should have received a copy of the
 %% Erlang Public License along with this software. If not, it can be
 %% retrieved online at http://www.erlang.org/.
-%% 
+%%
 %% Software distributed under the License is distributed on an "AS IS"
 %% basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
 %% the License for the specific language governing rights and limitations
 %% under the License.
-%% 
+%%
 %% %CopyrightEnd%
 %
 %% Api defs file, defines the classes and members we want.
@@ -889,7 +889,12 @@
 
 {enum, wxTreeItemIcon, "wxTreeItemIcon_"}.
 
-{class, wxTreeCtrl, wxControl, [],
+{class, wxTreeCtrl, wxControl,
+ [{doc,
+   "Note: The representation of treeItemId() have changed "
+   "from the original class implementation to be an semi-opaque type,"
+   "Equality between TreeItemId's can be tested and zero means that the TreeItem is invalid."
+  }],
  ['wxTreeCtrl','~wxTreeCtrl','AddRoot','AppendItem',
   %% Not on Windows 'AssignButtonsImageList','GetButtonsImageList','SetButtonsImageList' 
   'AssignImageList','AssignStateImageList','Collapse','CollapseAndReset',
@@ -897,10 +902,10 @@
 						%'EndEditLabel',
   'EnsureVisible','Expand','GetBoundingRect',
   'GetChildrenCount','GetCount','GetEditControl',
-						%'GetFirstChild',
+  {'GetFirstChild',[{"cookie", out}]}, {'GetNextChild',[{"cookie", [both]}]},
   'GetFirstVisibleItem',{'GetImageList',0},'GetIndent',
   'GetItemBackgroundColour','GetItemData','GetItemFont','GetItemImage',
-  'GetItemText','GetItemTextColour','GetLastChild', % 'GetNextChild',
+  'GetItemText','GetItemTextColour','GetLastChild',
   'GetNextSibling','GetNextVisible','GetItemParent',%'GetParent',
   'GetPrevSibling','GetPrevVisible','GetRootItem',
   'GetSelection',{'GetSelections', [{return, nowhere},{"val",out}]},
