--- a/c_src/Makefile.in
+++ b/c_src/Makefile.in
@@ -1,19 +1,19 @@
 #
 # %CopyrightBegin%
-# 
-# Copyright Ericsson AB 2008-2009. All Rights Reserved.
-# 
+#
+# Copyright Ericsson AB 2008-2010. All Rights Reserved.
+#
 # The contents of this file are subject to the Erlang Public License,
 # Version 1.1, (the "License"); you may not use this file except in
 # compliance with the License. You should have received a copy of the
 # Erlang Public License along with this software. If not, it can be
 # retrieved online at http://www.erlang.org/.
-# 
+#
 # Software distributed under the License is distributed on an "AS IS"
 # basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See
 # the License for the specific language governing rights and limitations
 # under the License.
-# 
+#
 # %CopyrightEnd%
 #
 
@@ -47,14 +47,11 @@ ERL_DIR = @ERLANG_ROOT_DIR@
 ERL_INCS = -I$(ERL_DIR)/usr/include
 
 else
-ERLANG_OSTYPE = @WXERL_SYS_TYPE@
 
-ERL_INCS= -I$(ERL_TOP)/erts/emulator/beam \
-	   -I$(ERL_TOP)/erts/emulator/sys/$(ERLANG_OSTYPE) \
-	   -I$(ERL_TOP)/erts/include/internal \
-	   -I$(ERL_TOP)/erts/include/internal/$(ERLANG_OSTYPE) \
-	   -I$(ERL_TOP)/erts/include \
-	   -I$(ERL_TOP)/erts/include/$(ERLANG_OSTYPE)
+include $(ERL_TOP)/make/target.mk
+include $(ERL_TOP)/make/$(TARGET)/otp_ded.mk
+
+ERL_INCS= $(DED_INCLUDES)
 
 endif
 
