Commit of the generated code with previous commit.
Should be the same as previously. Still generated with doxxygen-1.4.6.

--- a/api_gen/wx_doxygen.conf
+++ b/api_gen/wx_doxygen.conf
@@ -255,14 +255,15 @@ PREDEFINED             = \
   __WXGTK24__=1 \
   __WXGTK20__=1 \
   __WXGTK__=1 \
+  wxCHECKLBOX_CHECKED="" \
   WXDLLEXPORT=""
 
 #  WXWIN_COMPATIBILITY_2_6=1 \
-                         
-EXPAND_AS_DEFINED      = WX_FORWARD_TO_SCROLL_HELPER __WXGTK20__
+
+EXPAND_AS_DEFINED      = WX_FORWARD_TO_SCROLL_HELPER
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
-# Configuration::additions related to external references   
+# Configuration::additions related to external references
 #---------------------------------------------------------------------------
 TAGFILES               = 
 GENERATE_TAGFILE       = 
