Added missing wxTextCtrl:editLabel/2.
Reported by akorosmezey.

--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -902,8 +902,8 @@
  ['wxTreeCtrl','~wxTreeCtrl','AddRoot','AppendItem',
   %% Not on Windows 'AssignButtonsImageList','GetButtonsImageList','SetButtonsImageList' 
   'AssignImageList','AssignStateImageList','Collapse','CollapseAndReset',
-  'Create','Delete','DeleteAllItems','DeleteChildren',{'EditLabel',1},
-						%'EndEditLabel',
+  'Create','Delete','DeleteAllItems','DeleteChildren',
+  {'EditLabel', [{"textCtrlClass", [nowhere]}]}, %'EndEditLabel',
   'EnsureVisible','Expand','GetBoundingRect',
   'GetChildrenCount','GetCount','GetEditControl',
   {'GetFirstChild',[{"cookie", out}]}, {'GetNextChild',[{"cookie", [both]}]},
