Windows and Mac build issues

--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -1147,7 +1147,7 @@
 {class, wxGLCanvas, wxWindow, 
  [{skip, [{'SetCurrent', 2}]}], %% NA MAC
  [{'wxGLCanvas', [{"attribList", [in, {single,array}]},
-		  {pre_hook, {erl, "wxe_master:init_opengl(),"}}]},
+		  {pre_hook, {erl, "{ok, _} = wxe_master:init_opengl(),"}}]},
   'GetContext',
   {'SetCurrent', [{post_hook,{c, "if(This->GetContext()) setActiveGL(Ecmd.caller,This)"}}]},
   %%{'SetColour', [{"colour", [in, {single,array}]}]},
