--- a/c_src/Makefile.in
+++ b/c_src/Makefile.in
@@ -79,7 +79,7 @@ WX_OBJECTS  = $(GENERAL_O) $(GENERATED_O) $(RC_FILE)
 OBJECTS = $(WX_OBJECTS) $(GL_OBJECTS)
 
 TARGET_APIS = wxe_driver erl_gl
-TARGET_DIR = ../priv/$(SYS_TYPE)
+TARGET_DIR = ../priv
 
 # -O2 -funroll-loops  -ffast-math -fomit-frame-pointer 
 
@@ -179,11 +179,11 @@ $(TARGET_DIR)/erl_gl$(SO_EXT): $(GL_OBJECTS)
 ifeq ($(INSIDE_ERLSRC),true)
 include $(ERL_TOP)/make/otp_release_targets.mk
 release_spec: opt
-	$(INSTALL_DIR) $(RELSYSDIR)/priv/$(SYS_TYPE)
+	$(INSTALL_DIR) $(RELSYSDIR)/priv
 	$(INSTALL_DATA) ../priv/erlang-logo32.png $(RELSYSDIR)/priv/
 	$(INSTALL_DATA) ../priv/erlang-logo64.png $(RELSYSDIR)/priv/
-	$(INSTALL_PROGRAM) $(TARGET_DIR)/wxe_driver$(SO_EXT) $(RELSYSDIR)/priv/$(SYS_TYPE)
-	$(INSTALL_PROGRAM) $(TARGET_DIR)/erl_gl$(SO_EXT) $(RELSYSDIR)/priv/$(SYS_TYPE)
+	$(INSTALL_PROGRAM) $(TARGET_DIR)/wxe_driver$(SO_EXT) $(RELSYSDIR)/priv/
+	$(INSTALL_PROGRAM) $(TARGET_DIR)/erl_gl$(SO_EXT) $(RELSYSDIR)/priv/
 
 release_docs_spec:
 
