Add lib paths for *bsd variants

--- a/configure.in
+++ b/configure.in
@@ -179,8 +179,6 @@ case $host_os in
 	;;
 esac
 
-AC_SUBST(GL_LIBS)
-
 dnl ----------------------------------------------------------------------
 dnl Include CPPFLAGS in CFLAGS
 dnl ----------------------------------------------------------------------
@@ -223,12 +221,18 @@ if test X"$host_os" != X"win32" ; then
 	    if test X"$ac_cv_header_GL_gl_h" != Xyes ; then
 		AC_MSG_WARN([No OpenGL headers found, wx will NOT be usable])
 		CPPFLAGS="$saved_CPPFLAGS"
+	    else 
+	    	GL_LIBS="-L/usr/local/lib $GL_LIBS"
 	    fi
+	else 
+    	    GL_LIBS="-L/usr/X11R6/lib $GL_LIBS"
        	fi
     fi
 else
     AC_CHECK_HEADERS([gl/gl.h],[],[],[#include <windows.h>])
 fi
+
+AC_SUBST(GL_LIBS)
 
 CXXFLAGS="$CFLAGS $CPPFLAGS" 
 CFLAGS="$CFLAGS $CPPFLAGS $C_ONLY_FLAGS"
