--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -2,7 +2,7 @@
 %%
 %% %CopyrightBegin%
 %%
-%% Copyright Ericsson AB 2008-2010. All Rights Reserved.
+%% Copyright Ericsson AB 2008-2011. All Rights Reserved.
 %%
 %% The contents of this file are subject to the Erlang Public License,
 %% Version 1.1, (the "License"); you may not use this file except in
@@ -756,7 +756,8 @@
   'SetFirstItem']}.
 
 {class, wxListCtrl, wxControl, [],
- ['wxListCtrl','~wxListCtrl','Arrange','AssignImageList','ClearAll','Create',
+ [{'wxListCtrl', [{where, taylormade}]},
+  '~wxListCtrl','Arrange','AssignImageList','ClearAll','Create',
   'DeleteAllItems','DeleteColumn','DeleteItem',
   {'EditLabel',[{"textControlClass",nowhere}]},
   'EnsureVisible',
