--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -789,6 +789,13 @@
   'SetFont','SetId','SetImage','SetMask','SetState',
   'SetStateMask','SetText','SetTextColour','SetWidth']}.
 
+{class, wxListItemAttr, root, [],
+ ['wxListItemAttr','~wxListItemAttr',
+  'GetBackgroundColour', 'GetFont',
+  'GetTextColour', 'HasBackgroundColour', 'HasFont',
+  'HasTextColour', 'SetBackgroundColour', 'SetFont', 'SetTextColour'
+ ]}.
+
 {class, wxImageList, object, [{skip, [{'Create',1}]}], %% No create/0 on windows
  ['wxImageList','~wxImageList','Add','Create','Draw','GetBitmap','GetIcon','GetImageCount',
   'GetSize','Remove','RemoveAll','Replace']}.
