Fix documentation and callback options in wxListCtrl:create/3

--- a/api_gen/wxapi.conf
+++ b/api_gen/wxapi.conf
@@ -757,7 +757,8 @@
 
 {class, wxListCtrl, wxControl, [],
  [{'wxListCtrl', [{where, taylormade}]},
-  '~wxListCtrl','Arrange','AssignImageList','ClearAll','Create',
+  '~wxListCtrl','Arrange','AssignImageList','ClearAll',
+  {'Create',[{where, taylormade}]},
   'DeleteAllItems','DeleteColumn','DeleteItem',
   {'EditLabel',[{"textControlClass",nowhere}]},
   'EnsureVisible',
